[gd_scene load_steps=6 format=3 uid="uid://cplnpdevklo5q"]

[ext_resource type="Script" path="res://scenes/news_page/news_page.gd" id="1_o1anh"]
[ext_resource type="Theme" uid="uid://ce7gdo6lqyra0" path="res://study room theme.tres" id="1_qgbru"]
[ext_resource type="Texture2D" uid="uid://ckjwrov611wks" path="res://scenes/Collectable_scenes/Collectables/purdue-boilermakers-football-purdue-boilermakers-men-s-basketball-mackey-arena-purdue-pete-university-purdue-boilermakers-women-s-basketball-thumbnail.png" id="3_axs6r"]
[ext_resource type="FontFile" uid="uid://dis5kj2s7vfny" path="res://fonts/KOMIKAX_.ttf" id="3_vrrxc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q7c6d"]
bg_color = Color(0.141176, 0.141176, 0.141176, 1)

[node name="NewsPage" type="Panel"]
custom_minimum_size = Vector2(100, 100)
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.975
offset_bottom = 8.20001
theme = ExtResource("1_qgbru")
script = ExtResource("1_o1anh")

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 24.0
offset_top = 24.0
offset_right = 160.0
offset_bottom = 64.0
text = "Return to PMU"

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 0
offset_left = 96.0
offset_top = 152.0
offset_right = 1080.0
offset_bottom = 544.0

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 64.0
offset_top = 93.0
offset_right = 1099.0
offset_bottom = 143.0
theme_override_colors/font_shadow_color = Color(0.541176, 0.45098, 0, 1)
theme_override_constants/shadow_offset_x = 4
theme_override_constants/shadow_offset_y = 5
theme_override_fonts/font = ExtResource("3_vrrxc")
theme_override_font_sizes/font_size = 30
text = "News Articles: Click on Article to View Description and Link"

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 17.0
offset_top = 533.0
offset_right = 138.0
offset_bottom = 646.0
texture = ExtResource("3_axs6r")
expand_mode = 3

[node name="Button2" type="Button" parent="."]
layout_mode = 0
offset_left = 456.0
offset_top = 576.0
offset_right = 720.0
offset_bottom = 616.0
theme_override_font_sizes/font_size = 20
text = "Visit Purdue's News Page"

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = 280.0
offset_top = 200.0
offset_right = 888.0
offset_bottom = 464.0
theme_override_styles/panel = SubResource("StyleBoxFlat_q7c6d")

[node name="RichTextLabel" type="RichTextLabel" parent="Panel"]
layout_mode = 0
offset_right = 608.0
offset_bottom = 160.0
theme_override_font_sizes/normal_font_size = 20

[node name="Button" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 3.0
offset_top = 216.0
offset_right = 75.0
offset_bottom = 262.0
text = "Close"

[node name="Button2" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 463.0
offset_top = 217.0
offset_right = 606.0
offset_bottom = 263.0
text = "Visit Article "

[connection signal="request_completed" from="HTTPRequest" to="." method="_on_news_request_completed"]
[connection signal="pressed" from="Button" to="." method="_on_return_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_page_pressed"]
[connection signal="pressed" from="Panel/Button" to="." method="_on_exit_panel_pressed"]
[connection signal="pressed" from="Panel/Button2" to="." method="_on_link_pressed"]
